--- a/_data/i18n/en.yml
+++ b/_data/i18n/en.yml
@@ -2,7 +2,7 @@ site_title: "Tampa Bay Recycles"
 jumbo_text: "Together We Have Made Tampa Bay one of the Top Recycling Regions in Florida"
 
 intro_text: |
-  Local governments across Tampa Bay have teamed up to improve recycling efforts in the region. No matter which Tampa Bay area community you call home, all residential recycling programs throughout Hillsborough and Pinellas counties now recycle the same items but we all also face the same challenge of contamination – attempting to recycle soiled items or materials our programs don’t accept.
+  Local governments across Tampa Bay have teamed up to improve recycling efforts in the region. Recycling rules vary by jurisdiction based on collection and processing capabilities so please check with your local recycling service provider to ensure you are recycling correctly and helping our region avoid the common challenge of contamination - attempting to recycle soiled items or materials our programs don't accept.
 
   Join the social media conversation, share recycling tips, and ask questions by using **#TampaBayRecycles**
 
