--- a/_data/i18n/es.yml
+++ b/_data/i18n/es.yml
@@ -2,7 +2,7 @@ site_title: "Tampa Bay Recicla"
 jumbo_text: "Juntos hemos convertido a Tampa Bay en una de las principales regiones de reciclaje en Florida"
 
 intro_text: |
-  Los gobiernos locales de Tampa Bay se han unido para mejorar los esfuerzos de reciclaje en la región. Independientemente de la comunidad del área de Tampa Bay a la que usted llame hogar, todos los programas residenciales de reciclaje en los condados de Hillsborough y Pinellas ahora reciclan los mismos artículos, pero también enfrentamos el mismo problema de contaminación: intentar reciclar artículos o materiales sucios que nuestros programas no aceptan.
+  Los gobiernos locales de la bahía de Tampa se han unido para mejorar los esfuerzos de reciclaje en la región. Las reglas de reciclaje varían según la jurisdicción según las capacidades de recolección y procesamiento, así que consulte con su proveedor de servicios de reciclaje local para asegurarse de que está reciclando correctamente y a la vez, ayudando a nuestra región a evitar el desafío común de la contaminación: intentar reciclar artículos o materiales sucios que nuestros programas no pueden aceptar.
 
   Únase a la conversación de las redes sociales, comparta sugerencias de reciclaje y haga preguntas utilizando **#TampaBayRecycles**
 
